plugins {
    id 'java'
    id 'application'
}

group = 'clean.code'
version = '1.0-SNAPSHOT'

repositories {
    mavenCentral()
}

dependencies {
    // Core Libraries
    implementation("com.github.javaparser:javaparser-core:3.25.10")
    implementation("info.picocli:picocli:4.7.6")

    // Testing Libraries
    testImplementation(platform("org.junit:junit-bom:5.10.2"))
    testImplementation("org.junit.jupiter:junit-jupiter")
    testImplementation("org.assertj:assertj-core:3.25.3")
    testImplementation("org.mockito:mockito-core:5.11.0")
    testImplementation("org.mockito:mockito-junit-jupiter:5.11.0")
}

java {
    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

application {
    mainClass.set("clean.code.Application")
}

test {
    useJUnitPlatform()
}